2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/processor.c, libgputils/gpprocessor.h:
    Renamed two predefined constants:
    __SHARED_START ==> __COMMON_RAM_START
    __SHARED_END   ==> __COMMON_RAM_END

2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/12f629_g.lkr, lkr/12f675_g.lkr, lkr/16c61_g.lkr:
    bugfix

  * doc/gputils.lyx, gpasm/processor.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h:
    New predefined constants: __ACC_RAM_LOW_END, __SHARED_START,
    __SHARED_END, __PROGRAM_END, __VECTOR_RESET, __VECTOR_INT,
    __VECTOR_INT_EXT, __VECTOR_INT_TMR0, __VECTOR_INT_T0CKI,
    __VECTOR_INT_PERI, __VECTOR_INT_HIGH, __VECTOR_INT_LOW

  * gputils/testsuite/test,
    gputils/testsuite/gpdasm.project/eeprom14_2.asm:
    A new test file to the EEPROM area.

  * gputils/testsuite/gpdasm.project/eeprom16e.asm:
    A little modification.

  * gpasm/directive.c, gpasm/preprocess.c:
    Changed text format.

  * gpasm/gpasm.h, gpasm/util.c:
    New function: stptoupper()

  * gputils/gpdasm.c:
    A little code simplification.

2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/16f83_g.lkr, lkr/16f84_g.lkr, lkr/16f84a_g.lkr,
    lkr/16f526_g.lkr, lkr/16f527_g.lkr, lkr/16f570_g.lkr,
    lkr/16f818_g.lkr, lkr/16f819_g.lkr, lkr/16f870_g.lkr,
    lkr/16f871_g.lkr, lkr/16f872_g.lkr:
    bugfix

2014-07-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c,
    gpasm/processor.c:
    New predefined constants: __EEPROM_START and __EEPROM_END

  * gplink/cod.c, gplink/parse.y:
    Changed text format.

  * gputils/gpdasm.c:
    Changed text format and copyright.

  * gputils/testsuite/test,
    gputils/testsuite/gpdasm.project/eeprom14_0.asm,
    gputils/testsuite/gpdasm.project/eeprom14_1.asm,
    gputils/testsuite/gpdasm.project/eeprom14e.asm,
    gputils/testsuite/gpdasm.project/eeprom16e.asm: